mandeep-sensor-platform/bridge/base/kibana-expose.yaml
#! kibana-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: kibana
    namespace: mandeep-sensor-platform
    labels:
        com.docker.compose.project: mandeep-sensor-platform
        com.docker.compose.service: kibana
spec:
    selector:
        com.docker.compose.project: mandeep-sensor-platform
        com.docker.compose.service: kibana
    ports:
        - name: kibana-5601
          port: 5601
          targetPort: kibana-5601
