mandeep-sensor-platform/bridge/base/kibana-service.yaml
#! kibana-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: kibana-published
    namespace: mandeep-sensor-platform
    labels:
        com.docker.compose.project: mandeep-sensor-platform
        com.docker.compose.service: kibana
spec:
    selector:
        com.docker.compose.project: mandeep-sensor-platform
        com.docker.compose.service: kibana
    ports:
        - name: kibana-5601
          port: 5601
          protocol: TCP
          targetPort: kibana-5601

# check if there is at least one published port
