mandeep-sensor-platform/bridge/base/elk-net-network-policy.yaml
#! elk-net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: elk-net-network-policy
    namespace: mandeep-sensor-platform
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.elk-net: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.elk-net: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.elk-net: "true"
